src/objects/Account_Financial__c.object
<CustomObject>
    <description>These are key financials and other metrics internal to the account</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Select / search the account you wish to update the financial information for</description>
        <inlineHelpText>Select / search the account you wish to update the financial information for</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Financials</relationshipLabel>
        <relationshipName>Account_Financials</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cash_ST_Investments_Change__c</fullName>
        <label>Cash &amp; ST Investments % Change</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cash_ST_Investments__c</fullName>
        <label>Cash &amp; ST Investments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Days_Payable_Outstanding__c</fullName>
        <inlineHelpText>Days Payable Outstanding (DPO)</inlineHelpText>
        <label>Days Payable Outstanding (DPO)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Sales_Inventory__c</fullName>
        <inlineHelpText>Days Sales of Inventory (DSI)</inlineHelpText>
        <label>Days Sales of Inventory (DSI)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Sales_Outstanding__c</fullName>
        <inlineHelpText>Days Sales Outstanding (DSO)</inlineHelpText>
        <label>Days Sales Outstanding (DSO)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_TAM_Overall__c</fullName>
        <description>This is the Overall Mobile Devices TAM (Feature Phonoe + Smartphone) for the calendar year</description>
        <inlineHelpText>This is the Overall Mobile Devices TAM (Feature Phonoe + Smartphone) for the calendar year</inlineHelpText>
        <label>Estimated TAM Overall</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_TAM_Smartphone__c</fullName>
        <description>This is the Smartphone TAM for the Account for calendar year in question</description>
        <inlineHelpText>This is the Smartphone TAM for the Account for calendar year in question</inlineHelpText>
        <label>Estimated TAM Smartphone</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Financial_Calendar__c</fullName>
        <label>Financial Calendar</label>
        <picklist>
            <picklistValues>
                <fullName>Calendar Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiscal Year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financial_Quarter__c</fullName>
        <label>Financial Quarter</label>
        <picklist>
            <picklistValues>
                <fullName>Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financial_Year__c</fullName>
        <description>Financial Year for which you wish to update the financial information for</description>
        <inlineHelpText>Financial Year for which you wish to update the financial information for</inlineHelpText>
        <label>Financial Year</label>
        <picklist>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gross_Margin_Percent__c</fullName>
        <label>Gross Margin %</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees__c</fullName>
        <description>Total number of employees for the account</description>
        <inlineHelpText>Total number of employees for the account</inlineHelpText>
        <label>Number of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Post_paid__c</fullName>
        <description>Percentage of Subscribers using Post paid plans</description>
        <inlineHelpText>Percentage of Subscribers using Post paid plans</inlineHelpText>
        <label>% Post-paid</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pre_paid__c</fullName>
        <description>% of Subscriber who are on Pre Paid plan</description>
        <inlineHelpText>% of Subscriber who are on Pre Paid plan</inlineHelpText>
        <label>% Pre-paid</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Profit_Margin_Percent__c</fullName>
        <description>This is profit margin % for the financial Year</description>
        <inlineHelpText>This is profit margin % for the financial Year</inlineHelpText>
        <label>Profit Margin %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Profit_Margin__c</fullName>
        <description>Absolute Profit for the financial year</description>
        <inlineHelpText>Absolute Profit for the financial year</inlineHelpText>
        <label>Profit Margin $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Growth_YOY__c</fullName>
        <description>Revenue Growth % Y-o-Y</description>
        <inlineHelpText>Revenue Growth % Y-o-Y</inlineHelpText>
        <label>Revenue Growth YOY %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <description>This is the Full year Revenue for financial year</description>
        <inlineHelpText>This is the Full year Revenue for financial year</inlineHelpText>
        <label>Revenue $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscriber_YOY_Growth_trend__c</fullName>
        <description>This is subscriber growth rate for the year (Applies in case of a carrie / operator)</description>
        <inlineHelpText>This is subscriber growth rate for the year (Applies in case of a carrie / operator)</inlineHelpText>
        <label>Subscriber YOY Growth %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Subscribers__c</fullName>
        <description>Total number of mobile subscribers. Applies in case of carrier / operator</description>
        <inlineHelpText>Total number of mobile subscribers. Applies in case of carrier / operator</inlineHelpText>
        <label>Total Subscribers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Financial</label>
    <nameField>
        <displayFormat>AF-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Financials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>